fix all posts grid spilling at ~740px

--- a/src/components/blogposts/blogposts.scss
+++ b/src/components/blogposts/blogposts.scss
@@ -2,7 +2,7 @@
 
 .allPosts-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(min(327px, 100%), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(min(308px, 100%), 1fr));
     margin: variables.$main-margin;
     gap: 0.8em;
 }
